--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "axios": "^1.8.4",
     "buffer": "^6.0.3",
     "clsx": "^2.1.1",
+    "elevenlabs": "^1.57.0",
+    "express": "^5.1.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.503.0",
+    "multer": "^1.4.5-lts.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
