--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+VITE_API_KEY_ELEVENLABS="sk_f8a13f952558ed7a1c33d7701031c9c0ecb30cc6b2ef0a81"
+VITE_API_KEY_GOOGLE="AIzaSyDoKPvvZTzORNW3iH7ie5YwZrsgkfX8yuE"
 VITE_API_BASE_URL="http://localhost:5500/api/v1"
