--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@google/genai": "^0.9.0",
     "axios": "^1.8.4",
     "buffer": "^6.0.3",
@@ -21,7 +23,7 @@
     "multer": "^1.4.5-lts.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.30.0",
+    "react-router-dom": "^7.5.2",
     "swiper": "^11.2.6",
     "yup": "^1.6.1"
   },
