--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google/genai": "^0.9.0",
     "axios": "^1.8.4",
     "buffer": "^6.0.3",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "elevenlabs": "^1.57.0",
     "express": "^5.1.0",
