--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2",
     "swiper": "^11.2.6",
+    "tailwind-merge": "^3.2.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
